test/patterns_bak/s0961_n_repeated_element_in_size_2n_array/hafis/starchat/jml_syntax_checking.txt
./test/s0961_n_repeated_element_in_size_2n_array/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '<='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 10000) && (nums >= 0)));
                                                         ^
  first type:  int[]
  second type: int
./test/s0961_n_repeated_element_in_size_2n_array/hafis/starchat/Solution.java:13: error: bad operand types for binary operator '>='
//@ requires(\forall int i; 0 <= i < nums.length; ((nums <= 10000) && (nums >= 0)));
                                                                            ^
  first type:  int[]
  second type: int
2 errors
